fixed scrollbar issue in the main menu bar with low screen height

--- a/docs/src-static/css/custom.css
+++ b/docs/src-static/css/custom.css
@@ -59,6 +59,12 @@ article.teaser h2 {
     text-align: right;
 }
 
+@media (max-height: 48em) {
+    #menu {
+        width: 165px;
+    }
+}
+
 @media (max-width: 48em) {
     .list-item-description:before {
         content: "";
